get rid of jdk14 profile