@@ -343,58 +343,6 @@
       </build>
     </profile>
     <profile>
-      <id>java14</id>
-      <activation>
-        <jdk>14</jdk>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>build-helper-maven-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>add-test-source</id>
-                <phase>generate-test-sources</phase>
-                <goals>
-                  <goal>add-test-source</goal>
-                </goals>
-                <configuration>
-                  <sources>
-                    <source>src/test-jdk11/java</source>
-                    <source>src/test-jdk14/java</source>
-                  </sources>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <inherited>true</inherited>
-            <configuration>
-              <!-- Enable Java 14+ for all sources so that Intellij picks the right language level -->
-              <source>14</source>
-              <release>14</release>
-              <compilerArgs>
-                <arg>-parameters</arg>
-                <arg>--enable-preview</arg>
-              </compilerArgs>
-            	<fork>true</fork>
-            	<useIncrementalCompilation>true</useIncrementalCompilation>
-            </configuration>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <configuration>
-              <argLine>--enable-preview</argLine>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-    <profile>
       <!-- And different set up for JDK 17 -->
       <id>java17</id>
       <activation>
@@ -415,7 +363,6 @@
                 <configuration>
                   <sources>
                     <source>src/test-jdk11/java</source>
-                    <source>src/test-jdk14/java</source>
                     <source>src/test-jdk17/java</source>
                   </sources>
                 </configuration>
@@ -468,7 +415,6 @@
                 <configuration>
                   <sources>
                     <source>src/test-jdk11/java</source>
-                    <source>src/test-jdk14/java</source>
                     <source>src/test-jdk17/java</source>
                     <source>src/test-jdk21/java</source>
                   </sources>
